# QtOsgViewer

./: CMakeLists.txt  README.md  windows.bat
include/gui/: GuiExports.h  GuiInterface.h  MainWindow.h  OsgWidget.h  PickHandler.h
src/: main.cpp
src/gui/: GuiInterface.cpp  MainWindow.cpp  MainWindow.ui  OsgWidget.cpp  PickHandler.cpp
